--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 .p1{
     fill:#ffffff00;
     stroke:#f0ee37;
-    stroke-width:0.6pc;
+    stroke-width:0.6px;
     stroke-linecap:round;
     stroke-linejoin:round;
     paint-order:stroke fill;
